# Scylla

./: .gitignore  ARCHITECTURE.txt  BUILD.md  CMakeLists.txt  CODEBASE_OVERVIEW.md  DOCUMENTATION_INDEX.md  ENHANCEMENT_EXAMPLE.md  EXPLORATION_SUMMARY.md  README_MODERNIZATION.md  ROADMAP.md  WINDOWS_DEPENDENCIES.txt  WINE.md
.github/workflows/: build.yml
Plugins/: CMakeLists.txt
Scylla/: AboutGui.h  ApiReader.cpp  ApiReader.h  Architecture.h  Configuration.cpp  Configuration.h  ConfigurationHolder.h  DeviceNameResolver.h  DisassemblerGui.h  DllInjection.cpp  DllInjection.h  DonateGui.h  DumpMemoryGui.h  DumpSectionGui.h  FunctionExport.cpp  FunctionExport.h  Logger.cpp  Logger.h  MainGui.h  NativeWinApi.h  OptionsGui.h  PeParser.cpp  PeParser.h  PeRebuild.h  PickApiGui.h  PickDllGui.h  PluginLoader.h  ProcessAccessHelp.h  ProcessLister.h  StringConversion.cpp  StringConversion.h  SystemInformation.h  Thunks.h  TreeImportExport.h  WindowsCompat.h  tchar.h
ScyllaCLI/: AnalyzeCommand.cpp  BatchCommand.cpp  BatchCommand.h  BatchCommandExample.cpp  CMakeLists.txt  Commands.h  DumpCommand.cpp  DumpCommand.h  DumpCommandExample.cpp  InfoCommand.cpp  RebuildCommand.cpp  RebuildCommand.h  RebuildCommandExample.cpp  Utilities.cpp  cli_main.cpp  enhanced_cli_main.cpp
ScyllaGUI/: CMakeLists.txt
api/: APIServer.cpp  APIServer.h  CMakeLists.txt  README.md  main.cpp
api/examples/: api_client.py  curl_examples.sh
cmake/: toolchain-mingw32.cmake  toolchain-mingw64.cmake
cmake/modules/: FindWine.cmake
config/profiles/: malware-analysis.json  quick-scan.json
diStorm/: CMakeLists.txt
docs/: CONFIGURATION.md  DUMP_COMMAND.md
gui-imgui/: CMakeLists.txt  EnhancedVisualizations.cpp  README.md  ScyllaGUI.cpp  ScyllaGUI.h  main.cpp
libScylla/: CMakeLists.txt  Cache.cpp  Cache.h  CacheExample.cpp  Configuration.cpp  Configuration.h  ConfigurationExample.cpp  DebuggerBridge.cpp  DebuggerBridge.h  DotNetAnalyzer.cpp  DotNetAnalyzer.h  ELFAnalyzer.cpp  ELFAnalyzer.h  GDBBridge.cpp  GDBBridge.h  MachOAnalyzer.cpp  MachOAnalyzer.h  OEPDetector.cpp  OEPDetector.h  PackerDetector.cpp  PackerDetector.h  PackerDetectorExample.cpp  ParallelIATScanner.cpp  ParallelIATScanner.h  PlatformAbstraction.h  PlatformLinux.cpp  PlatformMacOS.cpp  PlatformWindows.cpp  SecurityAnalyzer.cpp  SecurityAnalyzer.h  SecurityAnalyzerExample.cpp  SymbolResolver.cpp  SymbolResolver.h  SymbolResolver.md  SymbolResolverExample.cpp  X64DbgBridge.cpp  X64DbgBridge.h  packer_signatures.json
python/: CMakeLists.txt  README.md  scylla_bindings.cpp  setup.py
python/examples/: automation_workflow.py  basic_analysis.py
python/scripts/: README.md  auto_unpack.py  batch_analyze.py  gdb_unpack.py
tinyxml/: CMakeLists.txt
x64dbg-plugin/: CMakeLists.txt  README.md  ScyllaPlugin.cpp  plugin.h  pluginmain.h
